--- a/templates/index.html
+++ b/templates/index.html
@@ -71,6 +71,7 @@
             // Connect to the Socket.IO server.
             // The connection URL has the following format, relative to the current page:
             //     http[s]://<domain>:<port>[/<namespace>]
+            $('#log').append('<br>' + $('<div/>').text('http://' + document.domain + ':' + location.port + namespace).html());
             var socket = io('http://' + document.domain + ':' + location.port + namespace);
             // Event handler for new connections.
             // The callback function is invoked when a connection with the
