--- a/templates/index.html
+++ b/templates/index.html
@@ -36,10 +36,11 @@
             // physical channel. If you don't care about multiple channels, you
             // can set the namespace to an empty string.
             namespace = '/test';
+            var port = document.getElementById("port").value;
             // Connect to the Socket.IO server.
             // The connection URL has the following format, relative to the current page:
             //     http[s]://<domain>:<port>[/<namespace>]
-            $('#log').append('<br>' + $('<div/>').text('http://' + document.domain + ':' + 8000 + namespace).html());
+            $('#log').append('<br>' + $('<div/>').text('http://' + document.domain + ':' + port + namespace).html());
             var socket = io('http://' + document.domain + ':' + 8000 + namespace);
             // Event handler for new connections.
             // The callback function is invoked when a connection with the
@@ -114,7 +115,9 @@
 </head>
 <body>
     <h1>Playground</h1>
+    <button type="button" id="port" value="{{port}}"name="button"></button>
     <canvas id="canvas" width="330" height="330"></canvas>
+
     <!--<h2>Send:</h2>
     <form id="emit" method="POST" action=''>
         <input type="text" name="emit_data" id="emit_data" placeholder="Message">
