--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
             // The connection URL has the following format, relative to the current page:
             //     http[s]://<domain>:<port>[/<namespace>]
             $('#log').append('<br>' + $('<div/>').text('http://' + document.domain + ':' + port + namespace).html());
-            var socket = io('https://' + document.domain + ':' + 8000 + namespace);
+            var socket = io('https://' + document.domain + ':' + port + namespace);
             // Event handler for new connections.
             // The callback function is invoked when a connection with the
             // server is established.
