--- a/templates/index.html
+++ b/templates/index.html
@@ -12,10 +12,12 @@
             ctx.fillStyle = "#000000"
             ctx.fillRect(0, 0, 330, 330)
             function draw(x, y, width, height, color){
+                //draws rectangles on canvas
                 ctx.fillStyle = color;
                 ctx.fillRect(x, y, width, height);
             }
             function veiw_port(list){
+                //draws the information passed from the server.
                 width = 60
                 height = 60
                 gridwidth = 330;
@@ -30,69 +32,27 @@
                     x = x + 65;
                 }
             }
-            // Use a "/test" namespace.
-            // An application can open a connection on multiple namespaces, and
-            // Socket.IO will multiplex all those connections on a single
-            // physical channel. If you don't care about multiple channels, you
-            // can set the namespace to an empty string.
             namespace = '/test';
-            var port = document.getElementById("port").value;
+            var port = {{port}}
             // Connect to the Socket.IO server.
             // The connection URL has the following format, relative to the current page:
             //     http[s]://<domain>:<port>[/<namespace>]
-            $('#log').append('<br>' + $('<div/>').text('http://' + document.domain + ':' + port + namespace).html());
             var socket = io('http://' + document.domain + ':' + port + namespace);
             // Event handler for new connections.
-            // The callback function is invoked when a connection with the
-            // server is established.
-            socket.on('connect', function() {
-                socket.emit('my_event', {data: 'I\'m connected!'});
-            });
-            // Event handler for server sent data.
-            // The callback function is invoked whenever the server emits data
-            // to the client. The data is then displayed in the "Received"
-            // section of the page.
             socket.on('veiw_port', function(msg, cb) {
                 if(player_id == msg.data){
                     veiw_port(msg.veiw);
-                $('#log').append('<br>' + $('<div/>').text('Received #' + msg.veiw + ': ' + msg.data).html());
                 if (cb)
                     cb();}
-            });
-            socket.on('my_response', function(msg, cb) {
-                if(player_id == msg.data){
-                $('#log').append('<br>' + $('<div/>').text('Received #' + msg.count + ': ' + msg.data).html());
-                if (cb)
-                    cb();}
-            });
-            socket.on('update_map', function(data) {
-                grid(data.color);
-
-            });
-            socket.on('update_map_real', function(data) {
-                $('#log').append('<br>' + $('<div/>').text('id' + data.player_id).html());
-                if(player_id == data.player_id){
-                grid_real(data.veiw)
-            }
             });
             socket.on('connected', function(data, cb) {
                 player_id = data.data
-                $('#log').append('<br>' + $('<div/>').text('id' + data.data).html());
             });
-            // Interval function that tests message latency by sending a "ping"
-            // message. The server then responds with a "pong" message and the
-
-            // Handlers for the different forms in the page.
-            // These accept data from the user and send it to the server in a
-            // variety of ways
-            $('form#emit').submit(function(event) {
-                socket.emit('my_event', {data: $('#emit_data').val()});
-                return false;
-            });
+            // Handlers for event listeners in the page.
+            // These accept data from the user and send it to the server
             document.addEventListener('keydown',function(event){
                 // socket.emit('my_key', {data: 'key down'});
                 if (event.keyCode == 68){
-                    $('#log').append('<br>' + $('<div/>').text('http://' + document.domain + ':' + port + namespace).html());
                     socket.emit('left', {data: 'left'});
 
                     }
@@ -115,16 +75,6 @@
 </head>
 <body>
     <h1>Playground</h1>
-    <button type="button" id="port" value="{{port}}"name="button"></button>
     <canvas id="canvas" width="330" height="330"></canvas>
-
-    <!--<h2>Send:</h2>
-    <form id="emit" method="POST" action=''>
-        <input type="text" name="emit_data" id="emit_data" placeholder="Message">
-        <input type="submit" value="Echo">
-    </form>
-
-    <h2>Receive:</h2>/-->
-    <div id="log"></div>
 </body>
 </html>
