--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
                 }
             }
             namespace = '/test';
-            var port = 5000
+            var port = {{port}}
             // Connect to the Socket.IO server.
             // The connection URL has the following format, relative to the current page:
             //     http[s]://<domain>:<port>[/<namespace>]
