--- a/templates/index.html
+++ b/templates/index.html
@@ -76,5 +76,6 @@
 <body>
     <h1>Playground</h1>
     <canvas id="canvas" width="330" height="330"></canvas>
+    <p>Move around using the WASD, if another person is logged in you \n should be able to see them moving around.</p>
 </body>
 </html>
